--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sanctuary | Ultimate Adaptive Navigator</title>
+  <title>Sanctuary | For Divija</title>
   <style>
     :root {
       --font-sans: 'Segoe UI', system-ui, -apple-system, sans-serif;
@@ -946,7 +946,7 @@
   <div class="modal-overlay" id="modal-onboarding">
     <div class="modal">
       <div class="modal-header">
-        <h3 class="modal-title">Welcome to Sanctuary</h3>
+        <h3 class="modal-title">Welcome to Sanctuary mf </h3>
         <button class="btn btn-icon btn-ghost" data-close="modal-onboarding" aria-label="Close">×</button>
       </div>
       <div class="modal-body">
@@ -2614,3 +2614,4 @@
   </script>
 </body>
 </html>
+
